--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Training webpack from scratch.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,11 @@
     "url": "https://github.com/AndersonCossul/webpack-training/issues"
   },
   "homepage": "https://github.com/AndersonCossul/webpack-training#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
+  },
   "devDependencies": {
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
