--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
     "postcss-loader": "^2.1.0",
     "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   }
